# uni_bd2_backend

./: CMakeLists.txt  README.md  backend.dockerfile  bd2-compose.yaml
database/: database.dockerfile
database/data/: districts.txt  insert-generator.py  municipalities.txt
database/sql/: 000_MIGRATE_postgres.sql  001_init.sql  database.dockerfile
db-data/: regions.txt  temp.txt
docs/: districts.js  index.html
docs/test/: TestySelenium_Czechy.side
frontend/: app.js  districts.js  frontend.dockerfile  home.js  index.html  municipalities.js  regions.js  signin.html  style.css
sql/: MIGRATE_bd2.sql  MIGRATE_postgres.sql  OLD.sql  TESTS.sql
src/: App.cpp  AppComponent.hpp
src/controller/: BDController.cpp  BDController.hpp
src/db/: BDDatabase.hpp
src/dto/: DtoDatabaseSearch.hpp  DtoDatabaseStatsDistricts.hpp  DtoDatabaseStatsMunicipalities.hpp  DtoDatabaseStatsRegions.hpp  DtoSearchResultsDistricts.hpp  DtoSearchResultsMunicipalities.hpp  DtoSearchResultsRegions.hpp  DtoStatsInfoDistrict.hpp  DtoStatsInfoMunicipality.hpp  DtoStatsInfoRegion.hpp  DtoStatsResultsDistricts.hpp  DtoStatsResultsMunicipalities.hpp  DtoStatsResultsRegions.hpp
src/enum/: EnumErrorType.hpp
src/service/: BDService.cpp  BDService.hpp
test/: BDTestSearch.cpp  BDTestSearch.hpp  BDTestStats.cpp  BDTestStats.hpp  tests.cpp
test/app/: BDTest.hpp  BDTestComponent.hpp
